# LivePalyer

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  AudioPullChannel.cpp  AudioPullChannel.h  AudioPushChannel.cpp  BaseChannel.cpp  BaseChannel.h  CMakeLists.txt  FFmpegHelper.cpp  FFmpegHelper.h  FaceTrack.cpp  FaceTrack.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  VideoPullChannel.cpp  VideoPullChannel.h  VideoPushChannel.cpp  VideoPushChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/demo/livePlayer/: AmazingActivity.java  FollowFaceActivity.java  LiveActivity.java  LivePlayerUtil.java  LivePullActivity.java  LivePushActivity.java  MainActivity.java  OpenSGLActivity.java  StartActivity.java
app/src/main/java/com/demo/livePlayer/live/: AudioChannel.java  CameraHelper.java  LivePusher.java  Player.java  VideoChannel.java
app/src/main/java/com/demo/livePlayer/opencv/: Face.java  OpencvJni.java
app/src/main/java/com/demo/livePlayer/opensgl/: FGLRender.java  FGLView.java
app/src/main/java/com/demo/livePlayer/opensgl/amazing/: AbstractFilter.java  AmazingRender.java  AmazingView.java  CameraFilter.java  ScreenFilter.java
app/src/main/java/com/demo/livePlayer/util/: CameraHelper.java  CameraHelper1.java  FileUtil.java  GLUtil.java  LivePlayerUtil.java  OpenFileUtil.java  PermissionUtility.java
app/src/main/java/com/demo/livepalyer/: MainActivity.java
app/src/main/java/com/demo/liveplayer/: LivePlayerUtil.java  MainActivity.java
app/src/main/res/layout/: activity_amazing.xml  activity_follow_face.xml  activity_live.xml  activity_live_pull.xml  activity_main.xml  activity_open_sgl.xml  activity_start.xml
app/src/main/res/raw/: base_frag.frag  base_vertex.vert  camera_frag.frag  camera_vertex.vert
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+7 files in other folders)
